# DesignPatterns

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE
EventDispatcher/: CMakeLists.txt  event_dispatcher.cpp  event_dispatcher.h
PImpl/: CMakeLists.txt  pimpl.cpp  pimpl.h
Strategy/: CMakeLists.txt  strategy.cpp  strategy.h
